# dealii-pod

./: .gitignore  CMakeLists.txt  README.markdown  compute-pod.cc  pod.cc  pod.h  snapshots.py
compare-pod-and-fe-projections/: CMakeLists.txt  compare.cc
compute-pod/: CMakeLists.txt  README.markdown  compute-pod.cc  parameter-file.prm  parameters.cc  parameters.h  snapshots.py
compute-pod-matrices/: CMakeLists.txt  compute-pod-matrices.cc  parameter-file.prm  parameters.cc  parameters.h
extra/: extra.cc  extra.h
filter-project-mean/: CMakeLists.txt  README.markdown  doit.sh  filter-project-mean.cc  parameter-file.prm  parameters.h
h5/: h5.h
include/deal.II-pod/extra/: extra.h  resize.h
include/deal.II-pod/h5/: h5.h  h5.templates.h
include/deal.II-pod/ns/: filter.h  ns.h
include/deal.II-pod/pod/: pod.h  pod.templates.h
include/deal.II-rom/extra/: extra.h
include/deal.II-rom/h5/: h5.h  h5.templates.h
include/deal.II-rom/ns/: filter.h  ns.h
include/deal.II-rom/ode/: ode.h
include/deal.II-rom/pod/: pod.h  pod.templates.h
ns/: CMakeLists.txt  README.markdown  filter.cc  filter.h  multirun.sh  ns.cc  ns.h  nstest.cc  nstest.sage  parameter-file.prm  parameters.cc  parameters.h  rk_factory.cc  rk_factory.h  rom.cc  rom.h
ns/test/: nstest.cc  nstest.sage
ns/test-rom/: test.cc
ode/: ode.cc  ode.h
plot-y-velocity/: CMakeLists.txt  README.markdown  parameters.h
pod/: h5.h  pod.cc  pod.h
pod-projection-error/: CMakeLists.txt  README.markdown
programs/: CMakeLists.txt
programs/compare-pod-and-fe-projections/: CMakeLists.txt  compare.cc
programs/compute-pod/: CMakeLists.txt  compute-pod.cc  parameter-file.prm  parameters.cc  parameters.h
programs/compute-pod-matrices/: CMakeLists.txt  compute-pod-matrices.cc  parameter-file.prm  parameters.cc  parameters.h  parameters.prm
programs/filter-project-mean/: CMakeLists.txt  doit.sh  filter-project-mean.cc  parameters.cc  parameters.h
programs/ns/: CMakeLists.txt  batch.py  multirun.sh  ns-rom.cc  parameter-file.prm  parameters.cc  parameters.h  parameters.prm  rk_factory.cc  rk_factory.h  rom.cc  rom.h  run.sh
programs/ns/test-rom/: CMakeLists.txt
programs/plot-pod-snapshots/: CMakeLists.txt  README.markdown  parameters.cc  parameters.h  parameters.prm  plot-pod-snapshots.cc
programs/plot-y-velocity/: CMakeLists.txt  parameters.cc  plot-y-velocity.cc
programs/pod-projection-error/: CMakeLists.txt  error.cc
programs/project/: CMakeLists.txt  project.cc
programs/rom-error/: README.markdown  parameters.h  rom-error.cc
project/: CMakeLists.txt  README.markdown  project.cc
rom-error/: README.markdown  parameters.cc  parameters.h  rom-error  rom-error.cc
source/: CMakeLists.txt
source/extra/: extra.cc  resize.cc
source/h5/: h5.cc
source/ns/: filter.cc  ns.cc
source/ode/: ode.cc
source/pod/: pod.cc
tests/: CMakeLists.txt
tests/compute-pod-matrices/: initial.h5  mean-vector.h5  pod-vector-0000000.h5  pod-vector-0000001.h5  pod-vector-0000002.h5  pod-vector-0000003.h5  pod-vector-0000004.h5  pod-vector-0000005.h5  pod-vector-0000006.h5  pod-vector-0000007.h5  pod-vector-0000008.h5  pod-vector-0000009.h5  rom-gradient-matrix.h5  rom-laplace-matrix.h5  rom-mean-contribution.h5  rom-nonlinearity.h5  triangulation.txt
tests/extra/: CMakeLists.txt  resize-full-matrix.cc  resize-vector.cc
tests/h5/: CMakeLists.txt  load-save-block-vector.cc  load-save-full-matrix.cc
tests/nse-2d/: CMakeLists.txt  parameters.prm  pod-leray-radius-0-r-10-Re-100.h5  rom-advection-matrix.h5  rom-boundary-matrix.h5  rom-gradient-matrix.h5  rom-initial-condition.h5  rom-laplace-matrix.h5  rom-mass-matrix.h5  rom-mean-contribution.h5  test-output.h5
tests/pod-basis/: CMakeLists.txt  basis-test.cc
