SET(COMPUTE_POD_MATRICES_TARGET_SRC
  ${COMPUTE_POD_MATRICES_TARGET}.cc
  parameters.cc
  parameters.h
  )

ADD_EXECUTABLE(${COMPUTE_POD_MATRICES_TARGET} ${COMPUTE_POD_MATRICES_TARGET_SRC})
DEAL_II_SETUP_TARGET(${COMPUTE_POD_MATRICES_TARGET})
TARGET_LINK_LIBRARIES(${COMPUTE_POD_MATRICES_TARGET} deal.II-pod)
