# SET(POD_BASIS_TEST_TARGET basis-test)
# SET(POD_BASIS_TEST_TARGET_SRC ${POD_BASIS_TEST_TARGET}.cc)

# ADD_EXECUTABLE(${POD_BASIS_TEST_TARGET} ${POD_BASIS_TEST_TARGET_SRC})
# DEAL_II_SETUP_TARGET(${POD_BASIS_TEST_TARGET})
# TARGET_LINK_LIBRARIES(${POD_BASIS_TEST_TARGET} deal.II-pod)

# ADD_TEST(NAME pod-basis COMMAND ${POD_BASIS_TEST_TARGET})
